--- a/src/classes/afNewBatchFormApexController.cls
+++ b/src/classes/afNewBatchFormApexController.cls
@@ -8,12 +8,18 @@ public class afNewBatchFormApexController {
     }
     
     @AuraEnabled
+    public static List<User> allTrainers () {
+        List<User> trnrList = [SELECT Id, Name
+                               FROM User
+                               WHERE UserRole.Name = 'Trainer' OR UserRole.Name = 'CoTrainer'];
+        return trnrList;
+    }
+    
+    @AuraEnabled
     public static List<Training__c> allTrainings () {
         List<Training__c> trngList = [SELECT Id, Name, TrainingTrack__c, StartDate__c, EndDate__c, CreatedDate, TrainingRoom__c, Trainer__c, CoTrainer__c 
                                       FROM Training__c
                                       WHERE EndDate__c >= TODAY];
-        System.debug('hullo');
-        System.debug(trngList);
         return trngList;
     }
 }
