--- a/src/classes/afAvailabilityListContainerController.cls
+++ b/src/classes/afAvailabilityListContainerController.cls
@@ -7,7 +7,7 @@ public class afAvailabilityListContainerController {
     public static List<User> Trainers = [SELECT Id, Name, Available__c
                                          FROM User 
                                          WHERE UserRole.Name = 'Trainer' OR UserRole.Name = 'CoTrainer'];
-    									/*WHERE Available__c!=null*/ /*UserRoleId=trainer role Id*/
+    /*WHERE Available__c!=null*/ /*UserRoleId=trainer role Id*/
     
     @AuraEnabled
     public static List<Training_Room__c> getRooms(){
@@ -32,7 +32,7 @@ public class afAvailabilityListContainerController {
         
         return yesFirst;
     }
-  
+    
     @AuraEnabled
     public static List<User> getAllTrainers(){
         //Must add a WHERE clause UserRoleId=Trainer Role Id
@@ -53,5 +53,9 @@ public class afAvailabilityListContainerController {
     public static List<Skill__c> getAllSkills(){
         return [SELECT Training_Track__c, Trainer__c From Skill__c];
     }
-
+    @AuraEnabled
+    public static List<Training__c> getAllTrainings(){
+        return [SELECT StartDate__c, EndDate__c, Trainer__c, CoTrainer__c, TrainingRoom__c FROM Training__c];
+    }
+    
 }
